# lucy-agent

./: .api.log.20250923-113142.bak  .api.log.20250923-113753.bak  .api.log.20250923-114421.bak  .api.log.20250923-115102.bak  .api.log.20250923-115608.bak  .api.log.20250923-115900.bak  .api.log.20250923-120135.bak  .api.log.20250923-120555.bak  .api.log.20250923-120950.bak  .api.log.20250923-121249.bak  .api.log.20250923-121514.bak  .api.log.20250923-121740.bak  .api.log.20250923-121754.bak  .api.log.20250923-121800.bak  .api.log.20250923-121808.bak  .api.log.20250923-121816.bak  .api.log.20250923-122017.bak  .api.log.20250923-122240.bak  .api.log.20250923-122654.bak  .api.log.20250923-123238.bak  .api.log.20250923-123514.bak  .api.log.20250923-123525.bak  .api.log.20250923-123852.bak  .api.log.20250923-124156.bak  .api.log.20250923-124338.bak  .api.log.20250923-124343.bak  .api.log.20250923-124605.bak  .api.log.20250923-124831.bak  .api.log.20250923-125056.bak  .api.log.20250923-125101.bak  .api.log.20250923-125106.bak  .api.log.20250923-125109.bak  .api.log.20250923-125115.bak  .api.log.20250923-125452.bak  .api.log.20250923-125725.bak  .api.log.20250923-125933.bak  .api.log.20250923-125936.bak  .api.log.20250923-130226.bak  .api.log.20250923-130229.bak  .api.log.20250923-130233.bak  (+17 more)
.github/: CODEOWNERS  pull_request_template.md
data/: agent.db
docs/: RUNBOOK.md
lucy_agent/: main.py  security.py
ops/: mark_done.sh
scripts/: autopilot_smoke_suite_v10.sh  autopilot_smoke_suite_v11.sh  autopilot_smoke_suite_v3.sh  autopilot_smoke_suite_v4.sh  ci_wait_and_fetch.sh  (+11 more)
(+122 files in other folders)
