[tool.poetry]
name = "lucy-agent"
version = "0.1.0"
description = "Agent להרצת משימות: טרמינל/SSH/DevOps/WAHA"
authors = ["Master Oleg"]
readme = "README.md"
packages = [{ include = "lucy_agent", from = "src" }]

[tool.poetry.dependencies]
paramiko = "^3.5.0"
docker = "^7.1.0"
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {version="^0.30.0", extras=["standard"]}
pydantic = "^2.8.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
httpx = "^0.27"
sse-starlette = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.2.0"

[tool.poetry.scripts]
lucy-agent = "lucy_agent.main:run"

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
